tests/models/enum/unnamed/u32/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        u32
    ),
}
fn main() {}
