tests/models/enum/unnamed/u32/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2.0)]
        u32
    ),
}
fn main() {}
